<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:padding="15dp"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textAlignment="center"
        android:textColor="@color/colorPrimary"
        android:textSize="40sp"/>
    <TableLayout
        android:id="@+id/baseLayout"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:stretchColumns="*"
        android:padding="15dp">
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp">
            <TextView
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="@string/sender_label"
                android:textSize="20sp"/>
            <Spinner
                android:id="@+id/sender"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:entries="@array/sending_countries_array"
                android:textSize="20sp"/>
        </TableRow>
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp">
            <TextView
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="@string/receiver_label"
                android:textSize="20sp"/>
            <Spinner
                android:id="@+id/receiver"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:entries="@array/receiving_countries_array"
                android:textSize="20sp"/>
        </TableRow>
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp">
            <TextView
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="@string/exchange_rate_label"
                android:textSize="20sp"/>
            <TextView
                android:id="@+id/exchange_rate"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:textSize="20sp"/>
        </TableRow>
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp">
            <TextView
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="@string/request_time_label"
                android:textSize="20sp"/>
            <TextView
                android:id="@+id/request_time"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:textSize="20sp"/>
        </TableRow>
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp">
            <TextView
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="@string/amount_label"
                android:textSize="20sp"/>
            <EditText
                android:id="@+id/amount"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:inputType="numberDecimal"
                android:autofillHints="no" />
            <TextView
                android:id="@+id/base_currency"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:textSize="20sp"/>
        </TableRow>
    </TableLayout>
    <TextView
        android:id="@+id/result_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:textColor="@color/colorSecondary"
        android:textSize="28sp"/>
</LinearLayout>